# iniforge

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/iniforge/: __init__.py  __main__.py  cli.py  converter.py  diff.py  env_parser.py  ini_parser.py  merge.py  models.py  properties_parser.py  query.py  validator.py
tests/: test_cli.py  test_converter.py  test_diff.py  test_env_parser.py  test_ini_parser.py  test_merge.py  test_properties_parser.py  test_query.py  test_validator.py
