[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iniforge"
version = "1.0.0"
description = "Configuration File Processing Toolkit — parse, query, diff, merge, convert INI, .properties, .env files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "EdgarOrtegaRamirez" }]
keywords = ["ini", "config", "properties", "env", "parser", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "pytest-cov>=6.0,<8",
    "ruff>=0.10,<2",
]

[project.scripts]
iniforge = "iniforge.cli:main"

[project.urls]
Homepage = "https://github.com/EdgarOrtegaRamirez/iniforge"
Repository = "https://github.com/EdgarOrtegaRamirez/iniforge"
Issues = "https://github.com/EdgarOrtegaRamirez/iniforge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/iniforge"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
